force-app/main/default/objects/Learning_Guide__kav/Learning_Guide__kav.object-meta.xml
<CustomObject>
    <articleTypeChannelDisplay>
        <articleTypeTemplates>
            <channel>App</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Prm</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Csp</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Pkb</channel>
            <template>Tab</template>
        </articleTypeTemplates>
    </articleTypeChannelDisplay>
    <description>Knowledge article type for learning guides and educational content</description>
    <label>Learning Guide</label>
    <pluralLabel>Learning Guides</pluralLabel>
</CustomObject>