force-app/main/default/objects/Learning_Guide__kav/fields/Learning_Objectives__c.field-meta.xml
<CustomField>
    <fullName>Learning_Objectives__c</fullName>
    <label>Learning Objectives</label>
    <type>Html</type>
    <description>What learners will achieve by following this guide</description>
</CustomField>