force-app/main/default/objects/Learning_Guide__kav/fields/Next_Steps__c.field-meta.xml
<CustomField>
    <fullName>Next_Steps__c</fullName>
    <label>Next Steps</label>
    <type>Html</type>
    <description>Recommended next learning steps and resources</description>
</CustomField>