force-app/main/default/objects/Learning_Guide__kav/fields/Practice_Exercises__c.field-meta.xml
<CustomField>
    <fullName>Practice_Exercises__c</fullName>
    <label>Practice Exercises</label>
    <type>Html</type>
    <description>Hands-on exercises and practice activities</description>
</CustomField>