force-app/main/default/objects/Learning_Guide__kav/fields/Prerequisites__c.field-meta.xml
<CustomField>
    <fullName>Prerequisites__c</fullName>
    <label>Prerequisites</label>
    <type>Html</type>
    <description>Required knowledge or skills before starting this guide</description>
</CustomField>