force-app/main/default/objects/Learning_Guide__kav/fields/Step_by_Step_Instructions__c.field-meta.xml
<CustomField>
    <fullName>Step_by_Step_Instructions__c</fullName>
    <label>Step-by-Step Instructions</label>
    <type>Html</type>
    <description>Detailed step-by-step learning instructions</description>
</CustomField>